--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,3 +1,3 @@
 <% @cocktails.each do |cocktail| %>
-<%= cocktail.name %><br>
+<%= cocktail.name %>[<%= link_to 'details', cocktail_path(cocktail) %>]<br>
 <%end%>
