--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,3 +1,6 @@
+<%= cl_image_tag("c26vto8mdcs3uqbdgu3d", width: 400, height: 300, crop: :fill) %>
+
+
 <% @cocktails.each do |cocktail| %>
 <%= cocktail.name %>[<%= link_to 'details', cocktail_path(cocktail) %>]<br>
 <%end%>
