--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,5 @@
 <%= @cocktail.name %>[<%= link_to 'add a dose', new_cocktail_dose_path(@cocktail) %>]<br>
+<%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %><br>
 <% @cocktail.doses.each do |dose| %>
 <%= dose.description %><br>
 <%= dose.ingredient.name %>
