--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
 </head>
 
 <body>
-  <%= yield %>
+  <%= render 'shared/navbar' %>
+  <div class="wrapper">
+    <div class="container">
+      <%= yield %>
+    </div>
+  </div>
 </body>
 </html>
